--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,12 +23,15 @@ spring:
       enabled: ALWAYS
 
 springdoc:
-  packages-to-scan: com.example.spacelab.controller
+  packages-to-scan: com.example.spacelab.controller, com.example.spacelab.model
   packages-to-exclude: com.example.spacelab.repository
+  paths-to-match: /api/**
   api-docs:
     enabled: true
+    path: /api-docs
   swagger-ui:
     tryItOutEnabled: true
+    operationsSorter: alpha
     tagsSorter: alpha
     filter: true
 
