openapi docs edit

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,7 @@ springdoc:
   packages-to-scan: com.example.spacelab.controller, com.example.spacelab.model
   packages-to-exclude: com.example.spacelab.repository
   paths-to-match: /api/**
+  override-with-generic-response: false
   api-docs:
     enabled: true
     path: /api-docs
