context path edit 2

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,8 @@ springdoc:
 
 server:
   port: 1488
+  servlet:
+    context-path: /spacelab
   error:
     include-message: always
     include-binding-errors: always
