--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<properties>
 		<java.version>17</java.version>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -115,6 +117,13 @@
 			<version>5.9.2</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+			<version>6.0.0.Final</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 
@@ -133,34 +142,36 @@
 					</excludes>
 				</configuration>
 			</plugin>
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-compiler-plugin</artifactId>-->
-<!--				<version>3.8.1</version>-->
-<!--				<configuration>-->
-<!--					<source>1.8</source> &lt;!&ndash; depending on your project &ndash;&gt;-->
-<!--					<target>1.8</target> &lt;!&ndash; depending on your project &ndash;&gt;-->
-<!--					<annotationProcessorPaths>-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.hibernate</groupId>
+							<artifactId>hibernate-jpamodelgen</artifactId>
+							<version>${hibernate.version}</version>
+						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.24</version>
+						</path>
 <!--						<path>-->
-<!--							<groupId>org.projectlombok</groupId>-->
-<!--							<artifactId>lombok</artifactId>-->
+<!--							<groupId>javax.xml.bind</groupId>-->
+<!--							<artifactId>jaxb-api</artifactId>-->
+<!--							<version>2.3.0</version>-->
 <!--						</path>-->
-<!--						&lt;!&ndash; This is needed when using Lombok 1.18.16 and above &ndash;&gt;-->
 <!--						<path>-->
-<!--							<groupId>org.projectlombok</groupId>-->
-<!--							<artifactId>lombok-mapstruct-binding</artifactId>-->
-<!--							<version>0.2.0</version>-->
+<!--							<groupId>javax.annotation</groupId>-->
+<!--							<artifactId>javax.annotation-api</artifactId>-->
+<!--							<version>1.3.1</version>-->
 <!--						</path>-->
-<!--						&lt;!&ndash; Mapstruct should follow the lombok path(s) &ndash;&gt;-->
-<!--						<path>-->
-<!--							<groupId>org.mapstruct</groupId>-->
-<!--							<artifactId>mapstruct-processor</artifactId>-->
-<!--							<version>${org.mapstruct.version}</version>-->
-<!--						</path>-->
-<!--						&lt;!&ndash; other annotation processors &ndash;&gt;-->
-<!--					</annotationProcessorPaths>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
