--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,10 @@ spring:
     user:
       name: user
       password: user
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   output:
     ansi:
       enabled: ALWAYS
