--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  profiles:
+    active: local
   http:
     encoding:
       force: false
@@ -27,7 +29,6 @@ spring:
       enabled: true
       max-file-size: 10MB
       max-request-size: 10MB
-
   output:
     ansi:
       enabled: ALWAYS
