--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -7,7 +7,7 @@ application:
   aws:
     bucket:
       name: spacelab-dp-bucket
-    accessKey: AKIAZ6H5HK6QC4ZQM7E7
-    secretKey: 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
+    accessKey: AKIAZ6H5HK6QAOMKNFFW
+    secretKey: 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
 
 
