--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
   profiles:
-    active: prod
+    active: local
   http:
+    log-request-details: true
     encoding:
       force: false
   datasource:
@@ -49,31 +50,34 @@ springdoc:
 
 server:
   port: 1489
-  servlet:
-    context-path: /spacelab
+#  servlet:
+#    context-path: /spacelab
   error:
     include-message: always
     include-binding-errors: always
 
 application:
   frontend-admin-panel:
-    port: 3001
+    hostname: localhost:3001
   frontend-personal-cabinet:
-    port: 3000
+    hostname: localhost:3000
   teamwork:
-    apiVersion: ${TEAMWORK_VERSION}
-    baseUrl: ${TEAMWORK_BASE_URL}
-    projectId: ${TEAMWORK_PROJECT_ID}
-    token: ${TEAMWORK_TOKEN}
+    apiVersion: v3
+    baseUrl: https://denisscompany18.teamwork.com
+    projectId: 641861
+    token: twp_QrGASGXS0eiIr83897z18EQXoWzV
   aws:
     bucket:
       name: spacelab-dp-bucket
-    accessKey: ${AWS_ACCESS_KEY}
-    secretKey: ${AWS_SECRET_KEY}
+    accessKey: AKIAZ6H5HK6QAOMKNFFW
+    secretKey: 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
 
-#logging:
-#  level:
-#    org:
-#      springframework: DEBUG
+logging:
+  level:
+    org:
+      springframework:
+        web: DEBUG
+      hibernate:
+        SQL: INFO
 #  pattern:
 #    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%15thread] %-60([Class: %c{1})] :: %-60([Method: %logger{0}.%M]) - %msg - line %L%n"
