--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://mysql:3306/spacelab2?createDatabaseIfNotExist=true
+    url: jdbc:mysql://spacelab_db:3306/spacelab2?createDatabaseIfNotExist=true
     username: root
     password: root
 
@@ -27,9 +27,9 @@ springdoc:
 
 application:
   frontend-admin-panel:
-    hostname: denis-perevertov.com/spacelab/admin
+    hostname: slj.avada-media-dev2.od.ua/spacelab/admin
   frontend-personal-cabinet:
-    hostname: denis-perevertov.com/spacelab/cabinet
+    hostname: slj.avada-media-dev2.od.ua/spacelab/cabinet
   teamwork:
     apiVersion: v3
     baseUrl: https://denisscompany18.teamwork.com
