--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -8,6 +8,13 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  DOCKER_CONTAINER_NAME: slj_spacelab_admin_api_dperevertov
+  DOCKER_CONTAINER_NETWORK: spacelab
+  DOCKER_IMAGE: temporalparadox/spacelab_admin_api:deploy_avada
+  HOST_PORT: 1489
+  DOCKER_PORT: 1489
+
 jobs:
   build:
 
@@ -41,7 +48,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: temporalparadox/spacelab_admin:latest
+        tags: $DOCKER_IMAGE
 
 
   deploy:
@@ -59,7 +66,7 @@ jobs:
             host: ${{ secrets.SERVER_HOST }}
             username: ${{ secrets.SERVER_USERNAME }}
             password: ${{ secrets.SERVER_PASSWORD }}
-            script: sudo docker stop spacelab_api
+            script: sudo docker stop $DOCKER_CONTAINER_NAME
 
       - uses: appleboy/ssh-action@v0.1.10
         name: Delete old container
@@ -68,7 +75,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          script: sudo docker rm spacelab_api
+          script: sudo docker rm $DOCKER_CONTAINER_NAME
 
       - uses: appleboy/ssh-action@v0.1.10
         name: Delete old image
@@ -77,7 +84,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          script: sudo docker rmi temporalparadox/spacelab_admin:latest
+          script: sudo docker rmi $DOCKER_IMAGE
 
       - uses: appleboy/ssh-action@v0.1.10
         name: Create new container with updated image
@@ -86,6 +93,5 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
-#          script: sudo docker run -p 9002:8080 -P --name myhome -e SPRING_DATASOURCE_URL=jdbc:mysql://172.17.0.2:3306/myhome -d temporalparadox/myhome:latest
-          script: sudo docker run -p 9006:1488 -P --name spacelab_api -e SPRING_DATASOURCE_URL=jdbc:mysql://172.17.0.2:3306/spacelab?createDatabaseIfNotExist=true -d temporalparadox/spacelab_admin:latest
+          script: sudo docker run -p $HOST_PORT:$DOCKER_PORT -P --name $DOCKER_CONTAINER_NAME --network $DOCKER_CONTAINER_NETWORK -e SPRING_PROFILES_ACTIVE=prod -d $DOCKER_IMAGE
 
